--- a/index.html
+++ b/index.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <style>
+        ul li:hover{
+            color: aquamarine;
+
+        }
+    </style>
 </head>
 <body>
-    
+    <nav class="bg-black p-4 text-white flex items-center justify-around">
+        <h1 class="text-3xl font-extrabold">ushapru</h1>
+        <ul class="flex gap-16 text-xl font-medium">
+            <li><a href="Home"></a></li>
+            <li><a href="">Services</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Test imonials</a></li>
+            <li><a href=""></a>Gallery</li>
+        </ul>
+    </nav>
 </body>
 </html>
